--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -208,6 +208,7 @@ body{
     max-width: 120px;
     transition: 300ms all;
     cursor: pointer;
+    text-align: center;
    
 }
 
@@ -223,9 +224,27 @@ body{
     background: black;
 }
 
-input[type="text"]{
+
+.mid-form{
+    width: 50%;
+    margin: 0px auto;
+}
+
+
+.mid-form label{
+    display: block;
+    float: left;
+    text-align: center;
+    margin-bottom: 5px;
+    font-size: 17px;
+    margin-top: 10px;
+}
+
+
+
+input[type="text"], textarea{
     width:100%;
-    height: 30px;
+    min-height: 30px;
     border: 1px solid #ccc;
     padding: 3px;
     margin-bottom: 5px;
@@ -234,6 +253,16 @@ input[type="text"]{
 
 input[type="text"]:focus{
     box-shadow: 0px 0px 5px #eee inset;
+}
+
+.mid-form textare{
+    width: 100px;
+    height: 150px;
+    min-width: 100px;
+    max-width: 100px;
+    min-height: 150px;
+    max-height: 300px;
+
 }
 
 #footer{
@@ -304,4 +333,27 @@ input[type="text"]:focus{
     font-size: 38px;
     border-bottom: 1px solid #eee;
     padding: 10px;
+    color :red;
 }
+
+.article-detail .image-wrap{
+    float: none;
+    width:100%;
+    height: 300px;
+}
+
+.article-detail .image-wrap img{ 
+    width: 100%;
+    height: auto;
+}
+
+.article-detail .subheader{
+    margin-bottom: 5px;
+    border: none;
+    margin-top: 10px;
+}
+
+.article-item .article-detail{
+    margin-top: 10px;
+}
+ 
